--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,216 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TruthGuard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>TruthGuard – Demo Mode</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: radial-gradient(circle at top, #0f172a, #020617);
-      color: #e5e7eb;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: radial-gradient(circle at top, #0f172a, #020617);
+  color: #e5e7eb;
+}
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 60px 20px;
-    }
+.container {
+  max-width: 900px;
+  margin: auto;
+  padding: 50px 20px;
+}
 
-    h1 {
-      text-align: center;
-      font-size: 46px;
-      margin-bottom: 10px;
-    }
+h1 {
+  text-align: center;
+  font-size: 48px;
+}
 
-    .subtitle {
-      text-align: center;
-      color: #94a3b8;
-      margin-bottom: 40px;
-    }
+.subtitle {
+  text-align: center;
+  color: #94a3b8;
+  margin-bottom: 40px;
+}
 
-    .card {
-      background: #020617;
-      border-radius: 14px;
-      padding: 30px;
-      margin-bottom: 30px;
-      border: 1px solid #1e293b;
-      box-shadow: 0 0 40px rgba(0,0,0,0.4);
-    }
+.card {
+  background: rgba(15, 23, 42, 0.85);
+  border: 1px solid rgba(148,163,184,0.15);
+  border-radius: 18px;
+  padding: 30px;
+  margin-bottom: 30px;
+  box-shadow: 0 20px 60px rgba(0,0,0,0.4);
+}
 
-    textarea {
-      width: 100%;
-      padding: 14px;
-      border-radius: 10px;
-      border: none;
-      font-size: 15px;
-      outline: none;
-      resize: none;
-      height: 140px;
-    }
+textarea, input[type=file] {
+  width: 100%;
+  padding: 14px;
+  border-radius: 12px;
+  border: none;
+  font-size: 15px;
+  background: #020617;
+  color: #e5e7eb;
+}
 
-    button {
-      width: 100%;
-      padding: 14px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 15px;
-    }
+button {
+  width: 100%;
+  padding: 14px;
+  border-radius: 12px;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 15px;
+}
 
-    .primary {
-      background: #22c55e;
-      color: #022c22;
-    }
+.primary {
+  background: linear-gradient(135deg, #22c55e, #16a34a);
+  color: #022c22;
+}
 
-    .secondary {
-      background: #1e293b;
-      color: #e5e7eb;
-    }
+.secondary {
+  background: rgba(148,163,184,0.1);
+  color: #e5e7eb;
+}
 
-    .row {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
-    }
+.row {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
 
-    .result {
-      margin-top: 20px;
-      padding: 20px;
-      border-radius: 12px;
-      border: 1px solid #1e293b;
-    }
+.result {
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 14px;
+  border: 1px solid rgba(148,163,184,0.2);
+  background: rgba(2,6,23,0.8);
+}
 
-    .low { color: #22c55e; }
-    .medium { color: #facc15; }
-    .high { color: #ef4444; }
+.low { color: #22c55e; }
+.medium { color: #facc15; }
+.high { color: #ef4444; }
 
-    ul {
-      margin-top: 10px;
-      padding-left: 18px;
-    }
+.badge {
+  display: inline-block;
+  padding: 6px 14px;
+  border-radius: 999px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
-    .note {
-      font-size: 13px;
-      color: #94a3b8;
-      margin-top: 12px;
-    }
-  </style>
+.low-b { background: rgba(34,197,94,0.2); color: #22c55e; }
+.medium-b { background: rgba(250,204,21,0.2); color: #facc15; }
+.high-b { background: rgba(239,68,68,0.2); color: #ef4444; }
+
+.progress {
+  height: 10px;
+  border-radius: 999px;
+  background: rgba(148,163,184,0.2);
+  overflow: hidden;
+  margin: 10px 0;
+}
+
+.progress-fill {
+  height: 100%;
+}
+
+.note {
+  font-size: 13px;
+  color: #94a3b8;
+  margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
 <div class="container">
 
-  <h1>TruthGuard</h1>
-  <p class="subtitle">
-    Transparent credibility analysis using rule-based logic and verification signals
-  </p>
+<h1>TruthGuard</h1>
+<p class="subtitle">
+Demo Mode · Transparent misinformation & synthetic media detection
+</p>
 
-  <!-- TEXT CREDIBILITY -->
-  <div class="card">
-    <h2>📝 Text Credibility Analysis</h2>
+<!-- TEXT CREDIBILITY -->
+<div class="card">
+  <h2>📝 Text Credibility Analysis</h2>
 
-    <textarea id="textInput"
-      placeholder="Paste news, claims, or social media content here..."></textarea>
+  <textarea id="textInput"
+    placeholder="Paste news or social media content here..."></textarea>
 
-    <button class="primary" onclick="analyzeText()">Analyze Text</button>
+  <button class="primary" onclick="analyzeText()">
+    Analyze Text
+  </button>
 
-    <div class="row">
-      <button class="secondary" onclick="demoLow()">Demo: Low</button>
-      <button class="secondary" onclick="demoMedium()">Demo: Medium</button>
-      <button class="secondary" onclick="demoHigh()">Demo: High</button>
-    </div>
-
-    <div id="textResult" class="result" style="display:none;"></div>
-
-    <p class="note">
-      Demo buttons show predefined examples. Analyze Text uses the backend engine.
-    </p>
+  <div class="row">
+    <button class="secondary" onclick="demoLow()">Demo Low</button>
+    <button class="secondary" onclick="demoMedium()">Demo Medium</button>
+    <button class="secondary" onclick="demoHigh()">Demo High</button>
   </div>
+
+  <div id="textResult" class="result" style="display:none;"></div>
+
+  <p class="note">
+    Demo mode uses simulated responses. Backend logic implemented separately.
+  </p>
+</div>
+
+<!-- MEDIA DETECTION -->
+<div class="card">
+  <h2>🖼️ AI Image & Video Detection</h2>
+
+  <input type="file" onchange="demoMedia()">
+
+  <div id="mediaResult" class="result" style="display:none;"></div>
+
+  <p class="note">
+    Visual AI detection shown for demonstration purposes.
+  </p>
+</div>
 
 </div>
 
 <script>
-/* ---------- BACKEND ANALYSIS ---------- */
-async function analyzeText() {
-  const text = document.getElementById("textInput").value.trim();
-  if (!text) {
-    alert("Please enter some text");
-    return;
-  }
+function showResult(level, confidence, reasons, crisis=false) {
+  const color = confidence < 35 ? "#22c55e" :
+                confidence < 65 ? "#facc15" : "#ef4444";
 
-  const box = document.getElementById("textResult");
-  box.style.display = "block";
-  box.innerHTML = "Analyzing...";
-
-  try {
-    const response = await fetch("/analyze", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ text })
-    });
-
-    const data = await response.json();
-
-    box.innerHTML = `
-      <h3>
-        Credibility:
-        <span class="${data.credibility.toLowerCase()}">
-          ${data.credibility}
-        </span>
-      </h3>
-      <ul>
-        ${data.reasons.map(r => `<li>${r}</li>`).join("")}
-      </ul>
-      <p class="note">${data.explanation}</p>
-    `;
-  } catch (e) {
-    box.innerHTML = "<p style='color:red'>Backend error</p>";
-  }
-}
-
-/* ---------- DEMO EXAMPLES (FRONTEND ONLY) ---------- */
-function showDemo(level, reasons) {
-  const box = document.getElementById("textResult");
-  box.style.display = "block";
-  box.innerHTML = `
-    <h3>
-      Credibility:
-      <span class="${level.toLowerCase()}">
-        ${level}
-      </span>
-    </h3>
-    <ul>
-      ${reasons.map(r => `<li>${r}</li>`).join("")}
-    </ul>
-    <p class="note">This is a demo example.</p>
+  return `
+    <span class="badge ${level.toLowerCase()}-b">${level} Credibility</span>
+    <div class="progress">
+      <div class="progress-fill" style="width:${confidence}%; background:${color}"></div>
+    </div>
+    <ul>${reasons.map(r => `<li>${r}</li>`).join("")}</ul>
+    ${crisis ? "<p class='note'>⚠ Crisis-related content detected</p>" : ""}
   `;
 }
 
+function analyzeText() {
+  document.getElementById("textResult").style.display = "block";
+  document.getElementById("textResult").innerHTML =
+    showResult(
+      "Medium",
+      45,
+      [
+        "Neutral tone detected",
+        "Source presence unclear",
+        "No official confirmation available"
+      ]
+    );
+}
+
 function demoLow() {
-  showDemo("Low", [
-    "Sensational language detected",
-    "No official confirmation mentioned",
-    "No clear source provided"
-  ]);
+  document.getElementById("textResult").style.display = "block";
+  document.getElementById("textResult").innerHTML =
+    showResult(
+      "Low",
+      15,
+      [
+        "Sensational language detected",
+        "No verified source mentioned",
+        "Urgency manipulation observed"
+      ],
+      true
+    );
 }
 
 function demoMedium() {
-  showDemo("Medium", [
-    "Partial source mentioned",
-    "No official confirmation available"
-  ]);
+  document.getElementById("textResult").style.display = "block";
+  document.getElementById("textResult").innerHTML =
+    showResult(
+      "Medium",
+      48,
+      [
+        "Partial source mentioned",
+        "Information not fully verified"
+      ]
+    );
 }
 
 function demoHigh() {
-  showDemo("High", [
-    "Official government source cited",
-    "Information matches verified records"
-  ]);
+  document.getElementById("textResult").style.display = "block";
+  document.getElementById("textResult").innerHTML =
+    showResult(
+      "High",
+      82,
+      [
+        "Official government source cited",
+        "Matches verified public records"
+      ]
+    );
+}
+
+function demoMedia() {
+  document.getElementById("mediaResult").style.display = "block";
+  document.getElementById("mediaResult").innerHTML =
+    showResult(
+      "Low",
+      18,
+      [
+        "Natural noise patterns detected",
+        "Consistent edge distribution",
+        "No strong synthetic artifacts"
+      ]
+    );
 }
 </script>
 
